# Epilepsie-Paper

./: 01_Einleitung.aux  Epilepsie.bib  EpilepsyOutline.md  Wearable-Forschung_ Themen und Stand.md  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc
.obsidian/: workspace.json
ILIAS/: 1. Vorlage Hausarbeiten Erkla__rung Studierende_2023_01.doc  1. Vorlage_Abschlussarbeiten.dotx
Organization/: README.md  SEARCH EXPlanation.md  auto_extract.py  epidemiology-summary.md  extraction-template.csv  heart-to-wear_extraction.csv  heart-to-wear_notes.md  review-timeline.md  screening.csv  search-plan-ECG-epilepsy.md
Papers md/: Abdulsadig and Rodriguez-Villegas - 2023 - Sleep Posture Monitoring Using a Single Neck- Situated Accelerometer A Proof-of-Concept.md  Abtahi et al. - 2025 - Identification of Relevant ECG Features for Epileptic Seizure Prediction Using Interpretable Machine.md  AbuAlrob et al. - 2025 - Unlocking new frontiers in epilepsy through AI From seizure prediction to personalized medicine.md  Amengual-Gual et al. - 2019 - Patterns of epileptic seizure occurrence.md  Beghi - 2019 - The Epidemiology of Epilepsy.md  Beniczky et al. - 2020 - Biomarkers of seizure severity derived from wearable devices.md  Camp et al. - 2022 - Supervised machine learning to predict reduced depression severity in people with epilepsy through e.md  (+43 more)
papers-to-md-1/: pyproject.toml  requirements.txt
papers-to-md-1/scripts/: run_watcher.sh
papers-to-md-1/src/: config.py  main.py
papers-to-md-1/tests/: test_watcher.py
(+73 files in other folders)
