[tool.poetry]
name = "papers-to-md"
version = "0.1.0"
description = "A project that scans for new PDF files in the 'Papers' folder and converts them into Markdown format."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
watchdog = "^2.1.6"
pypdf = "^3.12.0"
markdownify = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"